tests/should_fail/bug/436_0.stderr
error: called prophetic logic function `prophecy` in logic context
  --> 436_0.rs:15:23
   |
15 |     b.g = snapshot! { prophecy(b) + 1 };
   |                       ^^^^^^^^

error: aborting due to 1 previous error

